--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,25 +11,22 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
-		<script defer src="https://unpkg.com/tailwindcss-intersect@2.x.x/dist/observer.min.js"></script>
+		
 	</head>
-	<body class="pt-4 px-4 heropattern">
+	<body class="bg-gradient-to-b from-[#1060A7] via-[#3C96E5] to-[#82C4FF] min-h-screen">
 	
-		<header class="container max-w-2xl mx-auto pt-8">
+		<header class="">
 			<Header></Header>
 		</header>
 		
-		<main class="container max-w-2xl mx-auto pt-8">
+		<main class="m-20">
 			<slot />
 		</main>
 
-		<footer class="container max-w-2xl mx-auto pt-8">
+		<footer class="">
 			<Footer></Footer>
 		</footer>
 
-		<div class="flex flex-row justify-end mt-8 intersect:animate-spin intersect:animate-delay-1000 intersect:animate-once">
-			<img src="detergodt.png" alt="thumbs up, siger Stefan">
-		</div>
-			
+		
 	</body>
 </html>
