--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,90 +1,116 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Button from '../components/Button.astro';
-import Link from '../components/Link.astro';
+import Pill from "../components/Pill.astro";
+import Link from "../components/Link.astro";
+import Text from "../components/Text.astro";
+import Heading from "../components/Heading.astro";
 ---
-<MainLayout title="Astro, Tailwind, Alpine, Motion One og Animate CSS Starter">
-	<article class="prose">
-		<h1>Astro, Tailwind, Alpine, Motion One og en lille samling Tailwind plugins</h1>
-		<p>Dette lille site er lavet med små kodestumper, der viser de forskellige frontend frameworks, vi skal bruge i løbet af valgfaget.</p>
-		<ul> 
-			<li class="hover:animate-shake">
-				<Link href="https://astro.build/" target="_blank">Astro<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://tailwindcss.com/" target="_blank">Tailwind<Link>
-			</li>	
-			<li class="hover:animate-shake">
-				<Link href="https://alpinejs.dev/" target="_blank">Alpine.js<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://motion.dev/" target="_blank">Motion One<Link>
-			</li>
-		</ul>
 
-		<h2>Dertil et par Tailwind plugins og andre godbidder</h2>
-		<ul id="stagger" class="list-disc">
-			<li class="hover:animate-shake">
-				<Link href="https://github.com/tailwindlabs/tailwindcss-typography" target="_blank">TailwindCSS Typography<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://github.com/tailwindlabs/tailwindcss-forms" target="_blank">TailwindCSS Forms<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://www.tailwindcss-animated.com/" target="_blank">TailwindCSS Animated<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://github.com/heidkaemper/tailwindcss-intersect" target="_blank">TailwindCSS Intersect<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://heroicons.com/" target="_blank">Hero Icons<Link>
-			</li>
-			<li class="hover:animate-shake">
-				<Link href="https://heropatterns.com/" target="_blank">Hero Patterns:<Link> Hero patterns er brugt til baggrunden på denne side under en <Link href="https://creativecommons.org/licenses/by/4.0/" target="_blank">creative commons</Link> licens.
-			</li>
-		</ul>
+<MainLayout title="">
+  <section class="min-h-screen grid place-items-center">
+    <video
+      autoplay
+      loop
+      muted
+      playsinline
+      class="h-auto"
+    >
+      <source src="/cloudanimation1.webm" type="video/webm" />
+    </video>
+  </section>
 
-		<h2>Når du skal starte et nyt projekt op</h2>
+  <section class="aboutgrid grid grid-cols-12 gap-4">
+    <div class="border-3 border-[var(--color-primary)] rounded-xl col-span-7 p-2">
+      <Heading
+        size="h2"
+        font="header"
+        stylingclasses="text-[var(--color-primary)]"
+      >
+        About
+      </Heading>
+      <Text
+        teksttype="paragraph"
+        stylingclasses="text-[var(--color-primary)]"
+      >
+        Jeg er multimediedesignstuderende på 3. semester med fokus på digital
+        design, især UX/UI og grafisk design. Jeg brænder for at skabe kreative
+        løsninger, der taler til målgruppen. I min praktik ønsker jeg at opnå
+        indsigt i professionelle designprocesser og teamwork. Som kollega er jeg
+        samarbejdsorienteret, kommunikativ og bidrager med kreativitet.
+      </Text>
+    </div>
 
-		<p>Når du skal starte et nyt projekt op, skal du bruge starter-templaten fra <Link href="https://github.com/stefangrage/astro-tailwind-starter" target="_blank">github.com/stefangrage/did-e24-starter</Link></p>
+    <div class="border-3 border-[var(--color-primary)] rounded-xl col-span-4 col-start-9">
+      <img src="" alt="" />
+    </div>
+  </section>
 
-		<p>Jeg vil opfordre dig til at lave din egen starter, som du udvikler på i løbet af hele semestret. Den kan du lave ved at lave et nyt starter-template repo på basis af min starter.</p>
+  <section class="skillsgrid grid grid-cols-12 grid-rows-2 gap-4">
+    <!-- Left, top (cols 1–7, row 1) -->
+    <div class="col-span-7 row-span-1 border-3 border-[var(--color-primary)] rounded-xl p-2">
+		<Heading
+        htmlheading="h3"
+        font="header"
+        stylingclasses="text-[var(--color-primary)]"
+      >
+        Languages
+      </Heading>
+	  <div class="space-x-4 space-y-4">
+		<Pill label="English - Native" />
+		<Pill label="Danish - Fluent" />
+		<Pill label="German - Understand" />
+	  </div>
+    </div>
 
-		<p>Starter templaten indeholder en fil/mappestruktur, et par komponeneter, et layout og en side, og alle de frontend frameworks, vi arbejder med i løbet af semestret.</p>
+    <!-- Left, bottom (cols 1–7, row 2) -->
+    <div class="col-span-7 row-start-2 border-3 border-[var(--color-primary)] rounded-xl p-2">
+		<Heading
+        htmlheading="h3"
+        font="header"
+        stylingclasses="text-[var(--color-primary)]"
+      >
+        Education
+      </Heading>
+	  <div class="space-x-4 space-y-4">
+		<Pill label="2024 - Current" />
+	  </div>
+	  <Text
+	  teksttype="paragraph"
+	  stylingclasses="text-[var(--color-primary)]"
+	>
+	  Multimediedesigner, EK - Københavns Erhvervsakademi
+    </div>
 
-		<p>
-			Start med at clone repo'et og installere alt det nødvendige ved at skrive <span class="italic font-bold">"npm i"</span> i terminalen. Kør sitet ved at skrive <span class="italic font-bold">"npm run dev"</span> i terminalen.
-		</p>
-		<p>
-			Tilpas derefter indholdet i "pages, layouts, components og assets...""
-		</p>
-		<p>
-			Og vigtigst af alt: Lav noget godt:-)
-		</p>
-		<h2>Inspiration</h2>
-		<p>
-			Du kan downloade det her lille eksempelsite fra <Link href="https://github.com/stefangrage/astro-tailwind-eksempel" target="_blank">github</Link>, og køre det lokalt. Forhåbenltligt ligner og fungerer det som <Link href="https://eloquent-genie-718325.netlify.app/">online-udgaven på Netlify</Link>.
-		</p>
-		<p>
-			Se også <Link href="http://motherfuckingwebsite.com/" target="_blank">dette lille site</a> for lidt inspiration.
-		</p>
-		<div>
-		<Button>Fang mig hvis du kan:-)</Button>
-		</div>
-	</article>
+    <!-- Right, tall (skip col 8; start at col 9, span 4 cols & both rows) -->
+    <div class="col-span-4 col-start-9 row-span-2 border-3 border-[var(--color-primary)] rounded-xl p-2">
+		<Heading
+        htmlheading="h3"
+        font="header"
+        stylingclasses="text-[var(--color-primary)]"
+      >
+        Skills
+      </Heading>
+	  <div class="space-x-4 space-y-4">
+		<Pill label="Photoshop" />
+		<Pill label="Premiere Pro" />
+		<Pill label="After Effects" />
+		<Pill label="Illustrator" />
+		<Pill label="Figma" />
+		<Pill label="Light Room" />
+		<Pill label="UX/UI" />
+		<Pill label="Tailwind" />
+		<Pill label="Astro" />
+		<Pill label="HTML/CSS" />
+		<Pill label="Alpine.js" />
+	  </div>
+    </div>
+  </section>
+
+  <section class="pastprojects"></section>
 </MainLayout>
+
 <script>
-	// Her kan du skrive JavaScript, der skal køre på siden
-	// Du kan også bruge Alpine.js eller Motion One til at lave interaktive elementer
-	/* Stagger animation */
-	import { animate, stagger, inView } from "motion";
-	inView( "#stagger" , () =>{
-		animate(
-		"#stagger li",
-		{ opacity: [0, 1] },
-		{ 
-			delay: stagger(1, { startDelay: 1 })
-		}
-		)
-	})
+  // Her kan du skrive JavaScript, der skal køre på siden
+  // Du kan også bruge Alpine.js eller Motion One til at lave interaktive elementer
+  /* Stagger animation */
 </script>
