--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,13 +13,13 @@ const { title } = Astro.props;
 		<title>{Astro.props.title}</title>
 		
 	</head>
-	<body class="bg-gradient-to-b from-[#1060A7] via-[#3C96E5] to-[#82C4FF] min-h-screen">
+	<body class="bg-gradient-to-b from-[#1060A7] via-[#3C96E5] to-[#82C4FF] min-h-screen ">
 	
 		<header class="">
 			<Header></Header>
 		</header>
 		
-		<main class="m-20">
+		<main >
 			<slot />
 		</main>
 
