--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -7,9 +7,9 @@ const {
 const Htmlheading = htmlheading;
 
 const sizeClasses = {
-  h1: "text-[45px] md:text-[96px] font-semibold",
+  h1: "text-[45px] md:text-[96px] font-semibold ",
   h2: "text-[37px] md:text-[80px] font-semibold",
-  h3: "text-[24px] md:text-[44px] font-semibold",
+  h3: "text-[30px] md:text-[44px] font-semibold pb-4",
 };
 
 const fontClasses = {
