--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,7 +24,11 @@ const { title } = Astro.props;
 		</main>
 
 		<footer class="">
-			<Footer></Footer>
+			<Footer
+  email="kianadellagatta@icloud.com"
+  phone="+45 29 11 03 53"
+  cvUrl="/kiana-cv.pdf"
+/>
 		</footer>
 
 		
