--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
 import Heading from "./Heading.astro";
 ---
 
-<footer class="mt-24 mb-12">
+<footer class="mt-24 mb-12 pb-18">
   <section class="text-center">
     <!-- Title -->
     <Heading htmlheading="h2" font="header" stylingclasses="text-[var(--color-primary)]">{title}</Heading>
