--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,24 +13,21 @@ const { title } = Astro.props;
 		<title>{Astro.props.title}</title>
 		
 	</head>
-	<body class="bg-gradient-to-b from-[#1060A7] via-[#3C96E5] to-[#82C4FF] min-h-screen ">
-	
-		<header class="">
-			<Header></Header>
+	<body class="h-screen bg-gradient-to-b from-[#1060A7] via-[#3C96E5] to-[#82C4FF] bg-fixed bg-cover bg-no-repeat">
+		<header>
+		  <Header />
 		</header>
-		
-		<main >
-			<slot />
+	  
+		<main>
+		  <slot />
 		</main>
-
-		<footer class="">
-			<Footer
-  email="kianadellagatta@icloud.com"
-  phone="+45 29 11 03 53"
-  cvUrl="/kiana-cv.pdf"
-/>
+	  
+		<footer>
+		  <Footer
+			email="kianadellagatta@icloud.com"
+			phone="+45 29 11 03 53"
+			cvUrl="/kiana-cv.pdf"
+		  />
 		</footer>
-
-		
-	</body>
+	  </body>
 </html>
